plugins {
	id('groovy-gradle-plugin')
	id('java')
	id('java-library')
	id('java-test-fixtures')
	id("net.minecraftforge.licenser") version "1.2.0"
	id('maven-publish')
	id('signing')
	id("io.freefair.lombok") version "9.5.0" apply false
	id('jacoco')
	id("com.gradleup.nmcp.aggregation") version "1.2.1"
}
def defaultEncoding = 'UTF-8'

apply plugin: 'eclipse'

group = 'com.sqlapp'

allprojects {
	description = "${description}"
}

wrapper {
	gradleVersion = '9.5.1'
}

java {
	withJavadocJar();
	withSourcesJar();
	toolchain {
		languageVersion = JavaLanguageVersion.of(21);
	}
}

javadoc {
	options {
		author=false
		locale='en_US'
		encoding=defaultEncoding
		docEncoding=defaultEncoding
		charSet=defaultEncoding
	}
	if(JavaVersion.current().isJava9Compatible()) {
		options.addBooleanOption('html5', true)
	}
	failOnError=false
	source = sourceSets.main.allJava
}

dependencies {	
	// For test
	testImplementation("org.hamcrest:hamcrest-library:3.0")

	testImplementation("cglib:cglib-nodep:3.3.0")
	testImplementation('org.objenesis:objenesis:3.4')
	

	testImplementation(platform('org.junit:junit-bom:6.1.0'))
	testImplementation('org.junit.jupiter:junit-jupiter')
	testRuntimeOnly('org.junit.platform:junit-platform-launcher')
	
	nmcpAggregation(project(":sqlapp-core"))
	nmcpAggregation(project(":sqlapp-command"))
	nmcpAggregation(project(":sqlapp-core-test"))
	nmcpAggregation(project(":sqlapp-core-db2"))
	nmcpAggregation(project(":sqlapp-core-derby"))
	nmcpAggregation(project(":sqlapp-core-firebird"))
	nmcpAggregation(project(":sqlapp-core-h2"))
	nmcpAggregation(project(":sqlapp-core-hirdb"))
	nmcpAggregation(project(":sqlapp-core-informix"))
	nmcpAggregation(project(":sqlapp-core-mdb"))
	nmcpAggregation(project(":sqlapp-core-mysql"))
	nmcpAggregation(project(":sqlapp-core-mariadb"))
	nmcpAggregation(project(":sqlapp-core-oracle"))
	nmcpAggregation(project(":sqlapp-core-postgres"))
	nmcpAggregation(project(":sqlapp-core-saphana"))
	nmcpAggregation(project(":sqlapp-core-spanner"))
	nmcpAggregation(project(":sqlapp-core-sqlite"))
	nmcpAggregation(project(":sqlapp-core-sqlserver"))
	nmcpAggregation(project(":sqlapp-core-sybase"))
	nmcpAggregation(project(":sqlapp-core-symfoware"))
	nmcpAggregation(project(":sqlapp-core-virtica"))
	nmcpAggregation(project(":sqlapp-core-phoenix"))
	nmcpAggregation(project(":sqlapp-core-dialect-test"))
	nmcpAggregation(project(":sqlapp-core-hsql"))
	nmcpAggregation(project(":sqlapp-graphviz"))
	nmcpAggregation(project(":sqlapp-gradle-plugin"))
}

subprojects {
	compileJava {
		options.encoding = defaultEncoding 
		options.compilerArgs = [
			"-Xlint:unchecked", "-Xlint:deprecation", '-parameters'
	//			, "--module-path", classpath.asPath
		]
	}
	compileTestJava {
		options.encoding = defaultEncoding 
	}

	tasks.withType(JavaCompile) {
		options.encoding = defaultEncoding
	}
	tasks.withType(AbstractCompile) each { 
		it.options.encoding = defaultEncoding 
	}
	
	tasks.withType(GroovyCompile) {
		groovyOptions.encoding = defaultEncoding
	}

	repositories {
		mavenCentral()
		google()
	}

}

eclipse {
	wrapper {
		gradleVersion = '9.5.1'
	}
	
	project {
		buildCommand 'org.eclipse.buildship.core.gradleprojectbuilder'
		natures 'org.eclipse.buildship.core.gradleprojectnature'
	}
	classpath {
		downloadSources = true
		downloadJavadoc = true
	}
	// Eclipse から "Refresh Gradle Project" を呼び出した時に実行されるタスク
	synchronizationTasks 'cleanEclipse', 'eclipse'
}

test {
	// JUnit platform を使う設定
	useJUnitPlatform()
	testLogging {
		// テスト時の標準出力と標準エラー出力を表示する
		showStandardStreams = true
		// イベントを出力する (TestLogEvent)
		//events "started", "skipped", "passed", "failed", "standardOut", "standardError"
		events "skipped", "passed", "failed", "standardOut", "standardError"
		// 例外発生時の出力設定 (TestExceptionFormat)
		exceptionFormat = 'full'
	}
}

task sourceJar(type: Jar) {
	from sourceSets.main.allJava
}

/*
artifacts {
	archives jar
	archives javadocJar
	archives sourcesJar
}
*/

jacoco { toolVersion = "0.8.14" }

sourceSets {
	generated {
		java {
			srcDirs = ['src/main/generated/']
		}
	}
	main {
		resources {
			srcDirs = [ 'src/main/resources' ]
		}
	}
	test {
		resources {
			srcDirs = [ 'src/test/resources' ]
		}
	}
}

nmcpAggregation {
	centralPortal {
		username.set("${mavenCentralUsername}")
		password.set("${mavenCentralPassword}")
		publishingType = "USER_MANAGED"
//		publishingType = "AUTOMATIC"
	}
}

tasks.withType(AbstractPublishToMaven).configureEach {
	mustRunAfter(tasks.withType(Sign))
}


build.dependsOn javadoc